# vkpaper

./: .gitignore  CMakeLists.txt  README.md  main.cpp  render.cpp  render.hpp  shadercompile.cpp  shadercompile.h  utils.cpp  utils.h
misc/: shader-list.md
protocols/: wayland.hpp  wlr-layer-shell-unstable-v1.hpp
shaders/: blue.frag  default.frag  default.vert  error.frag  sampler-quadrants.frag  sampler.frag  time.frag
src/: DefaultShaders.hpp  FileUtils.cpp  FileUtils.hpp  ShaderCompile.cpp  ShaderCompile.hpp  Socket.hpp  VkPaperRenderer.cpp  VkPaperRenderer.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanUtils.cpp  VulkanUtils.hpp  default-shaders.hpp  main.cpp  render.cpp  render.hpp  shadercompile.cpp  utils.cpp  utils.hpp
src/vkpaperctl/: main.cpp
transition-shaders/: crossfade.frag  ellipse.frag  movein.frag  noise-static.frag  noise-time.frag
